# mibase

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxy.conf
docs/: CMakeLists.txt  doxygen.conf.in
include/: CMakeLists.txt
include/mi/: Argument.hpp  Attribute.hpp  AttributeSet.hpp  BooleanAttribute.hpp  CMakeLists.txt  Clamp.hpp  ColorMapper.hpp  CommandTemplate.hpp  DoubleNumericAttribute.hpp  Exporter.hpp  FileLister.hpp  FileNameConverter.hpp  Importer.hpp  Limits.hpp  NonCopyable.hpp  NumericAttribute.hpp  ParallelFor.hpp  Parse.hpp  PriorityQueue.hpp  Progress.hpp  Routine.hpp  StringAttribute.hpp  SvgRenderer.hpp  SystemInfo.hpp  TestCase.hpp  TestSuite.hpp  Thread.hpp  Timer.hpp  Tokenizer.hpp  TripleNumericAttribute.hpp  XmlDocument.hpp  XmlDocumentExporter.hpp  XmlElement.hpp  XmlNode.hpp  XmlText.hpp  base.hpp  xml.hpp
samples/: CMakeLists.txt  argument0.cpp  attr0.cpp  command0.cpp  command1.cpp  kdtree0.cpp  list0.cpp  memory0.cpp  mesh0.cpp  octree0.cpp  progress0.cpp  routine0.cpp  routine1.cpp  svg0.cpp  system0.cpp  test.cpp  test0.cpp  thread0.cpp  thread1.cpp  thread2.cpp  time0.cpp  tokenizer0.cpp  volume0.cpp  volume1.cpp  volume2.cpp  volume3.cpp  volume4.cpp  volume5.cpp
src/: Argument.cpp  Attribute.cpp  AttributeSet.cpp  BooleanAttribute.cpp  CMakeLists.txt  ColorMapper.cpp  CommandTemplate.cpp  DoubleNumericAttribute.cpp  Exporter.cpp  FileLister.cpp  FileNameConverter.cpp  Importer.cpp  NumericAttribute.cpp  Parse.cpp  Progress.cpp  Routine.cpp  StringAttribute.cpp  SvgRenderer.cpp  SystemInfo.cpp  SystemInfoCygwin.hpp  SystemInfoInternal.hpp  SystemInfoInternalCygwin.hpp  SystemInfoInternalUnix.hpp  SystemInfoInternalUnknown.hpp  SystemInfoInternalWindows.hpp  TestCase.cpp  TestSuite.cpp  Thread.cpp  Timer.cpp  Tokenizer.cpp  TripleNumericAttribute.cpp  XmlDocument.cpp  XmlDocumentExporter.cpp  XmlElement.cpp  XmlNode.cpp  XmlText.cpp  main.cpp
tests/: CMakeLists.txt  TestCaseTest.cpp
unsupported/: CMakeLists.txt
unsupported/type2str/: CMakeLists.txt  Type2StrTest.cpp  main.cpp  type2str.hpp
unsupported/xml/: CMakeLists.txt  XmlDocument.cpp  XmlDocument.hpp  XmlDocumentExporter.cpp  XmlDocumentExporter.hpp  XmlNode.cpp  XmlNode.hpp  main.cpp
unsupported/xml2/: CMakeLists.txt  XmlAttribute.cpp  XmlAttribute.hpp  XmlDocument.cpp  XmlDocument.hpp  XmlDocumentExporter.cpp  XmlDocumentExporter.hpp  XmlElement.cpp  XmlElement.hpp  XmlNode.cpp  XmlNode.hpp  XmlText.cpp  XmlText.hpp  main.cpp
unsupported/xml3/: CMakeLists.txt  XmlDocument.cpp  XmlDocument.hpp  XmlDocumentExporter.cpp  XmlDocumentExporter.hpp  XmlDocumnet.hpp  XmlElement.cpp  XmlElement.hpp  XmlNode.cpp  XmlNode.hpp  XmlText.cpp  XmlText.hpp  main.cpp  xml.hpp  xml_old.hpp
