CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT(mibase)

SET(PROJECT_NAME "mibase")
SET(PACKAGE_VERSION_MAJOR "3")
SET(PACKAGE_VERSION_MINOR "2")
SET(PACKAGE_VERSION_PATCH "20150708")

SET(serial "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}")
SET(soserial "${PACKAGE_VERSION_MAJOR}")

SET (VERSION_STRING  "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}-${PACKAGE_VERSION_PATCH}")

ENABLE_TESTING()

INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

if(APPLE)
	SET(CMAKE_MACOSX_RPATH 1)
	ADD_DEFINITIONS(-g -O3 -Wall)
elseif(WIN32) 
	SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
	SET(CMAKE_BUILD_TYPE Release)
	SET(CMAKE_INSTALL_PREFIX, "C:/Program Files/mi")
endif(APPLE)

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(samples)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(docs)

#ctags
#add_custom_target(ctags ALL COMMAND "ctags" "-R" "-f" ".tags" "--languages=C++" "--exclude='CMake*'" "${CMAKE_SOURCE_DIR}/include")
	 

