FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	SET(DOXYGEN_LANGUAGE "English" CACHE STRING "Language used by doxygen")
	MARK_AS_ADVANCED(DOXYGEN_LANGUAGE)
	SET(DOXYGEN_SOURCE_DIR "${CMAKE_SOURCE_DIR}")
	SET(DOXYGEN_OUTPUT_DIR .)
	STRING(REGEX REPLACE ";" " " CMAKE_DOXYGEN_INPUT_LIST "${DOXYGEN_SOURCE_DIR}")
	CONFIGURE_FILE(doxygen.conf.in ${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf)
	SET(HTML_TARGET "html" )
  	ADD_CUSTOM_TARGET(${HTML_TARGET} ALL ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf
			DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf)

	INSTALL( DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html/" DESTINATION "/usr/local/share/doc/${PROJECT_NAME}-${VERSION_STRING}" )
ELSE(DOXYGEN_FOUND)
	MESSAGE (FATAL_ERROR "doxygen binary couldn't be found")
ENDIF(DOXYGEN_FOUND)

