FIND_PACKAGE(Doxygen)
IF(DOXYGEN_FOUND)
	SET(DOXYGEN_CONF_FILE "doxygen.conf")
	SET(DOXYGEN_CONF_PATH   ${CMAKE_CURRENT_BINARY_DIR}/${DOXYGEN_CONF_FILE})
	SET(DOXYGEN_SOURCE_DIR "${CMAKE_SOURCE_DIR}") 
	SET(DOXYGEN_TARGET "doc" )

	CONFIGURE_FILE(${DOXYGEN_CONF_FILE}.in ${DOXYGEN_CONF_PATH})

	ADD_CUSTOM_TARGET(${DOXYGEN_TARGET} 
			${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_PATH}
			DEPENDS  ${DOXYGEN_CONF_PATH})
	IF (WIN32)
		# to do .
	ELSE()
		INSTALL( DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/html/" 
			 DESTINATION "/usr/local/share/doc/${PROJECT_NAME}-${VERSION_STRING}" )
	ENDIF (WIN32)
ELSE(DOXYGEN_FOUND)
	MESSAGE (FATAL_ERROR "doxygen binary couldn't be found")
ENDIF(DOXYGEN_FOUND)

