ADD_EXECUTABLE(argument0 argument0.cpp)
ADD_EXECUTABLE(attr0 attr0.cpp)
ADD_EXECUTABLE(command0 command0.cpp)
ADD_EXECUTABLE(command1 command1.cpp)
ADD_EXECUTABLE(memory0 memory0.cpp)
ADD_EXECUTABLE(time0 time0.cpp)
ADD_EXECUTABLE(thread0 thread0.cpp)
ADD_EXECUTABLE(thread1 thread1.cpp)
ADD_EXECUTABLE(thread2 thread2.cpp)
TARGET_LINK_LIBRARIES(argument0 mibase)
TARGET_LINK_LIBRARIES(attr0 mibase)
TARGET_LINK_LIBRARIES(command0 mibase)
TARGET_LINK_LIBRARIES(command1 mibase)
TARGET_LINK_LIBRARIES(memory0 mibase)
TARGET_LINK_LIBRARIES(time0 mibase)
TARGET_LINK_LIBRARIES(thread0 mibase)
TARGET_LINK_LIBRARIES(thread1 mibase)
TARGET_LINK_LIBRARIES(thread2 mibase)
	





